--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -1,8 +1,10 @@
 name: Notify Telegram on Push
+
 on:
   push:
     branches:
       - main
+
 jobs:
   notify:
     runs-on: ubuntu-latest
@@ -15,8 +17,8 @@ jobs:
         run: |
           COMMIT_MSG="${{ github.event.head_commit.message }}"
           AUTHOR="${{ github.event.head_commit.author.name }}"
-          TEXT="🧠 New commit to ToyMania:\n\n*${COMMIT_MSG}*\nby ${AUTHOR}\n\n🔗 [View Commit](${COMMIT_URL})"
+          TEXT="New commit to ToyMania by ${AUTHOR}. Commit message: ${COMMIT_MSG}. View it here: ${COMMIT_URL}"
+
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
           -d chat_id="${TELEGRAM_CHAT_ID}" \
-          -d parse_mode=Markdown \
           --data-urlencode text="$TEXT"
