--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -1,15 +1,18 @@
-name: Notify Telegram on Push
+name: Notify Telegram
 
 on:
   push:
     branches:
       - main
+  release:
+    types: [published]
 
 jobs:
-  notify:
+  notify_commit:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: Send Telegram Message
+      - name: Send Telegram Message for Commit
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
@@ -18,6 +21,24 @@ jobs:
           COMMIT_MSG="${{ github.event.head_commit.message }}"
           AUTHOR="${{ github.event.head_commit.author.name }}"
           TEXT="New commit to ToyMania by ${AUTHOR}. Commit message: ${COMMIT_MSG}. View it here: ${COMMIT_URL}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+          -d chat_id="${TELEGRAM_CHAT_ID}" \
+          --data-urlencode text="$TEXT"
+
+  notify_release:
+    if: github.event_name == 'release'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Send Telegram Message for Release
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          RELEASE_URL: ${{ github.event.release.html_url }}
+          RELEASE_TAG: ${{ github.event.release.tag_name }}
+          RELEASE_NAME: ${{ github.event.release.name }}
+        run: |
+          TEXT="New ToyMania release: ${RELEASE_TAG}. Title: ${RELEASE_NAME}. View it here: ${RELEASE_URL}"
 
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
           -d chat_id="${TELEGRAM_CHAT_ID}" \
