Added full GitHub Telegram event notifications. This includes issues, Pull requests, stars, forks, and comments.

--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -6,40 +6,100 @@ on:
       - main
   release:
     types: [published]
+  issues:
+    types: [opened]
+  issue_comment:
+    types: [created]
+  pull_request:
+    types: [opened]
+  pull_request_review_comment:
+    types: [created]
+  watch:
+    types: [started]
+  fork:
 
 jobs:
   notify_commit:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - name: Send Telegram Message for Commit
+      - name: Notify commit
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          COMMIT_URL: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+          URL: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
         run: |
-          COMMIT_MSG="${{ github.event.head_commit.message }}"
-          AUTHOR="${{ github.event.head_commit.author.name }}"
-          TEXT="New commit to ToyMania by ${AUTHOR}. Commit message: ${COMMIT_MSG}. View it here: ${COMMIT_URL}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-          -d chat_id="${TELEGRAM_CHAT_ID}" \
-          --data-urlencode text="$TEXT"
+          MSG="New commit to ToyMania by ${{ github.event.head_commit.author.name }}. Commit message: ${{ github.event.head_commit.message }}. View it here: ${URL}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
 
   notify_release:
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
     steps:
-      - name: Send Telegram Message for Release
+      - name: Notify release
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          RELEASE_URL: ${{ github.event.release.html_url }}
-          RELEASE_TAG: ${{ github.event.release.tag_name }}
-          RELEASE_NAME: ${{ github.event.release.name }}
         run: |
-          TEXT="New ToyMania release: ${RELEASE_TAG}. Title: ${RELEASE_NAME}. View it here: ${RELEASE_URL}"
+          MSG="New ToyMania release: ${{ github.event.release.tag_name }}. Title: ${{ github.event.release.name }}. View it here: ${{ github.event.release.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
 
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-          -d chat_id="${TELEGRAM_CHAT_ID}" \
-          --data-urlencode text="$TEXT"
+  notify_issue:
+    if: github.event_name == 'issues'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify issue
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MSG="New issue created: #${{ github.event.issue.number }} — ${{ github.event.issue.title }} by ${{ github.event.issue.user.login }}. View: ${{ github.event.issue.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+  notify_comment:
+    if: github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify comment
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MSG="New comment by ${{ github.event.comment.user.login }}: \"${{ github.event.comment.body }}\". View: ${{ github.event.comment.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+  notify_pr:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify pull request
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MSG="New pull request by ${{ github.event.pull_request.user.login }}: #${{ github.event.pull_request.number }} — ${{ github.event.pull_request.title }}. View: ${{ github.event.pull_request.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+  notify_star:
+    if: github.event_name == 'watch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify star
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MSG="⭐ ToyMania was starred by ${{ github.event.sender.login }}!"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+  notify_fork:
+    if: github.event_name == 'fork'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify fork
+        env:
+          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          MSG="🍴 ToyMania was forked by ${{ github.event.forkee.owner.login }}. View their fork: ${{ github.event.forkee.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
