--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -27,10 +27,18 @@ jobs:
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          URL: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+          COMMIT_URL: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
         run: |
-          MSG="New commit to ToyMania by ${{ github.event.head_commit.author.name }}. Commit message: ${{ github.event.head_commit.message }}. View it here: ${URL}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          AUTHOR="${{ github.event.head_commit.author.name }}"
+          MSG="New commit from ${AUTHOR}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${{ github.event.head_commit.message }}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the commit here: ${COMMIT_URL}"
 
   notify_release:
     if: github.event_name == 'release'
@@ -41,8 +49,16 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="New ToyMania release: ${{ github.event.release.tag_name }}. Title: ${{ github.event.release.name }}. View it here: ${{ github.event.release.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          AUTHOR="${{ github.actor }}"
+          MSG="New release from ${AUTHOR}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="Title: ${{ github.event.release.name }} — Tag: ${{ github.event.release.tag_name }}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the release here: ${{ github.event.release.html_url }}"
 
   notify_issue:
     if: github.event_name == 'issues'
@@ -53,8 +69,16 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="New issue created: #${{ github.event.issue.number }} — ${{ github.event.issue.title }} by ${{ github.event.issue.user.login }}. View: ${{ github.event.issue.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          USER="${{ github.event.issue.user.login }}"
+          TITLE="${{ github.event.issue.title }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New issue from ${USER}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${TITLE}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the issue: ${{ github.event.issue.html_url }}"
 
   notify_comment:
     if: github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment'
@@ -65,20 +89,36 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="New comment by ${{ github.event.comment.user.login }}: \"${{ github.event.comment.body }}\". View: ${{ github.event.comment.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          USER="${{ github.event.comment.user.login }}"
+          BODY="${{ github.event.comment.body }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New comment from ${USER}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${BODY}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the comment: ${{ github.event.comment.html_url }}"
 
   notify_pr:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - name: Notify pull request
+      - name: Notify PR
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="New pull request by ${{ github.event.pull_request.user.login }}: #${{ github.event.pull_request.number }} — ${{ github.event.pull_request.title }}. View: ${{ github.event.pull_request.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          USER="${{ github.event.pull_request.user.login }}"
+          TITLE="${{ github.event.pull_request.title }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New pull request from ${USER}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${TITLE}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the pull request: ${{ github.event.pull_request.html_url }}"
 
   notify_star:
     if: github.event_name == 'watch'
@@ -89,8 +129,9 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="⭐ ToyMania was starred by ${{ github.event.sender.login }}!"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          USER="${{ github.event.sender.login }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="⭐ ToyMania was starred by ${USER}"
 
   notify_fork:
     if: github.event_name == 'fork'
@@ -101,5 +142,10 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MSG="🍴 ToyMania was forked by ${{ github.event.forkee.owner.login }}. View their fork: ${{ github.event.forkee.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
+          USER="${{ github.event.forkee.owner.login }}"
+          URL="${{ github.event.forkee.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="🍴 ToyMania was forked by ${USER}"
+
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View their fork: ${URL}"
