--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -27,18 +27,12 @@ jobs:
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-          COMMIT_URL: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
         run: |
           AUTHOR="${{ github.event.head_commit.author.name }}"
-          MSG="New commit from ${AUTHOR}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${{ github.event.head_commit.message }}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the commit here: ${COMMIT_URL}"
+          MESSAGE="${{ github.event.head_commit.message }}"
+          LINK="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New commit from ${AUTHOR}: ${MESSAGE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the commit here: ${LINK}"
 
   notify_release:
     if: github.event_name == 'release'
@@ -49,16 +43,12 @@ jobs:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
+          TAG="${{ github.event.release.tag_name }}"
+          TITLE="${{ github.event.release.name }}"
           AUTHOR="${{ github.actor }}"
-          MSG="New release from ${AUTHOR}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="$MSG"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="Title: ${{ github.event.release.name }} — Tag: ${{ github.event.release.tag_name }}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the release here: ${{ github.event.release.html_url }}"
+          LINK="${{ github.event.release.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New release from ${AUTHOR}: ${TITLE} (Tag: ${TAG})"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the release here: ${LINK}"
 
   notify_issue:
     if: github.event_name == 'issues'
@@ -71,14 +61,9 @@ jobs:
         run: |
           USER="${{ github.event.issue.user.login }}"
           TITLE="${{ github.event.issue.title }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New issue from ${USER}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${TITLE}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the issue: ${{ github.event.issue.html_url }}"
+          LINK="${{ github.event.issue.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New issue from ${USER}: ${TITLE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the issue here: ${LINK}"
 
   notify_comment:
     if: github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment'
@@ -91,34 +76,24 @@ jobs:
         run: |
           USER="${{ github.event.comment.user.login }}"
           BODY="${{ github.event.comment.body }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New comment from ${USER}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${BODY}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the comment: ${{ github.event.comment.html_url }}"
+          LINK="${{ github.event.comment.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New comment from ${USER}: ${BODY}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the comment here: ${LINK}"
 
   notify_pr:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
-      - name: Notify PR
+      - name: Notify pull request
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           USER="${{ github.event.pull_request.user.login }}"
           TITLE="${{ github.event.pull_request.title }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New pull request from ${USER}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="${TITLE}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the pull request: ${{ github.event.pull_request.html_url }}"
+          LINK="${{ github.event.pull_request.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New pull request from ${USER}: ${TITLE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the pull request here: ${LINK}"
 
   notify_star:
     if: github.event_name == 'watch'
@@ -130,8 +105,8 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           USER="${{ github.event.sender.login }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="⭐ ToyMania was starred by ${USER}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="⭐ ToyMania was starred by ${USER}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the repository: https://github.com/${{ github.repository }}"
 
   notify_fork:
     if: github.event_name == 'fork'
@@ -143,9 +118,6 @@ jobs:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
           USER="${{ github.event.forkee.owner.login }}"
-          URL="${{ github.event.forkee.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="🍴 ToyMania was forked by ${USER}"
-
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View their fork: ${URL}"
+          LINK="${{ github.event.forkee.html_url }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="🍴 ToyMania was forked by ${USER}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View their fork here: ${LINK}"
