--- a/.github/workflows/telegram-notify.yml
+++ b/.github/workflows/telegram-notify.yml
@@ -20,104 +20,125 @@ on:
 
 jobs:
   notify_commit:
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && vars.ENABLE_PUSH_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify commit
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           AUTHOR="${{ github.event.head_commit.author.name }}"
           MESSAGE="${{ github.event.head_commit.message }}"
           LINK="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New commit from ${AUTHOR}: ${MESSAGE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the commit here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="New commit from ${AUTHOR}: ${MESSAGE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the commit here: ${LINK}"
 
   notify_release:
-    if: github.event_name == 'release'
+    if: github.event_name == 'release' && vars.ENABLE_RELEASE_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify release
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           TAG="${{ github.event.release.tag_name }}"
           TITLE="${{ github.event.release.name }}"
           AUTHOR="${{ github.actor }}"
           LINK="${{ github.event.release.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New release from ${AUTHOR}: ${TITLE} (Tag: ${TAG})"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the release here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="New release from ${AUTHOR}: ${TITLE} (Tag: ${TAG})"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the release here: ${LINK}"
 
   notify_issue:
-    if: github.event_name == 'issues'
+    if: github.event_name == 'issues' && vars.ENABLE_ISSUE_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify issue
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           USER="${{ github.event.issue.user.login }}"
           TITLE="${{ github.event.issue.title }}"
           LINK="${{ github.event.issue.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New issue from ${USER}: ${TITLE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the issue here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="New issue from ${USER}: ${TITLE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the issue here: ${LINK}"
 
   notify_comment:
-    if: github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment'
+    if: (github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment') && vars.ENABLE_ISSUE_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify comment
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           USER="${{ github.event.comment.user.login }}"
           BODY="${{ github.event.comment.body }}"
           LINK="${{ github.event.comment.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New comment from ${USER}: ${BODY}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the comment here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="New comment from ${USER}: ${BODY}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the comment here: ${LINK}"
 
   notify_pr:
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' && vars.ENABLE_PR_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify pull request
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           USER="${{ github.event.pull_request.user.login }}"
           TITLE="${{ github.event.pull_request.title }}"
           LINK="${{ github.event.pull_request.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="New pull request from ${USER}: ${TITLE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the pull request here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="New pull request from ${USER}: ${TITLE}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the pull request here: ${LINK}"
 
   notify_star:
-    if: github.event_name == 'watch'
+    if: github.event_name == 'watch' && vars.ENABLE_STAR_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify star
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           USER="${{ github.event.sender.login }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="⭐ ToyMania was starred by ${USER}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View the repository: https://github.com/${{ github.repository }}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="⭐ ToyMania was starred by ${USER}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View the repository: https://github.com/${{ github.repository }}"
 
   notify_fork:
-    if: github.event_name == 'fork'
+    if: github.event_name == 'fork' && vars.ENABLE_FORK_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
+    env:
+      TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+      TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
     steps:
-      - name: Notify fork
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: |
+      - run: |
           USER="${{ github.event.forkee.owner.login }}"
           LINK="${{ github.event.forkee.html_url }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="🍴 ToyMania was forked by ${USER}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage -d chat_id="${TELEGRAM_CHAT_ID}" --data-urlencode text="View their fork here: ${LINK}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="🍴 ToyMania was forked by ${USER}"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
+            -d chat_id="${TELEGRAM_CHAT_ID}" \
+            --data-urlencode text="View their fork here: ${LINK}"
