--- a/.github/workflows/telegram-notifier.yml
+++ b/.github/workflows/telegram-notifier.yml
@@ -1,4 +1,5 @@
 name: Notify Telegram
+
 on:
   push:
     branches: [main]
@@ -29,12 +30,10 @@ jobs:
           AUTHOR="${{ github.event.sender.login }}"
           MESSAGE="${{ github.event.head_commit.message }}"
           LINK="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
+          TEXT="New commit from ${AUTHOR}: ${MESSAGE}\n\nView the commit here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="New commit from ${AUTHOR}: ${MESSAGE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the commit here: ${LINK}"
+            --data-urlencode text="${TEXT}"
 
   notify_release:
     if: github.event_name == 'release' && vars.ENABLE_RELEASE_NOTIFICATIONS == 'true'
@@ -49,12 +48,10 @@ jobs:
           TITLE="${{ github.event.release.name }}"
           AUTHOR="${{ github.actor }}"
           LINK="${{ github.event.release.html_url }}"
+          TEXT="New release from ${AUTHOR}: ${TITLE} (Tag: ${TAG})\n\nView the release here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="New release from ${AUTHOR}: ${TITLE} (Tag: ${TAG})"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the release here: ${LINK}"
+            --data-urlencode text="${TEXT}"
 
   notify_issue:
     if: github.event_name == 'issues' && vars.ENABLE_ISSUE_NOTIFICATIONS == 'true'
@@ -68,12 +65,10 @@ jobs:
           USER="${{ github.event.issue.user.login }}"
           TITLE="${{ github.event.issue.title }}"
           LINK="${{ github.event.issue.html_url }}"
+          TEXT="New issue from ${USER}: ${TITLE}\n\nView the issue here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="New issue from ${USER}: ${TITLE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the issue here: ${LINK}"
+            --data-urlencode text="${TEXT}"
 
   notify_comment:
     if: (github.event_name == 'issue_comment' || github.event_name == 'pull_request_review_comment') && vars.ENABLE_ISSUE_NOTIFICATIONS == 'true'
@@ -87,12 +82,10 @@ jobs:
           USER="${{ github.event.comment.user.login }}"
           BODY="${{ github.event.comment.body }}"
           LINK="${{ github.event.comment.html_url }}"
+          TEXT="New comment from ${USER}: ${BODY}\n\nView the comment here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="New comment from ${USER}: ${BODY}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the comment here: ${LINK}"
+            --data-urlencode text="${TEXT}"
 
   notify_pr:
     if: github.event_name == 'pull_request' && vars.ENABLE_PR_NOTIFICATIONS == 'true'
@@ -106,12 +99,10 @@ jobs:
           USER="${{ github.event.pull_request.user.login }}"
           TITLE="${{ github.event.pull_request.title }}"
           LINK="${{ github.event.pull_request.html_url }}"
+          TEXT="New pull request from ${USER}: ${TITLE}\n\nView the pull request here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="New pull request from ${USER}: ${TITLE}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the pull request here: ${LINK}"
+            --data-urlencode text="${TEXT}"
 
   notify_star:
     if: github.event_name == 'watch' && vars.ENABLE_STAR_NOTIFICATIONS == 'true'
@@ -123,12 +114,11 @@ jobs:
       - name: Notify star
         run: |
           USER="${{ github.event.sender.login }}"
+          LINK="https://github.com/${{ github.repository }}"
+          TEXT="⭐ ToyMania was starred by ${USER}\n\nView the repository: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="⭐ ToyMania was starred by ${USER}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View the repository: https://github.com/${{ github.repository }}"
+            --data-urlencode text="${TEXT}"
 
   notify_fork:
     if: github.event_name == 'fork' && vars.ENABLE_FORK_NOTIFICATIONS == 'true'
@@ -141,9 +131,7 @@ jobs:
         run: |
           USER="${{ github.event.forkee.owner.login }}"
           LINK="${{ github.event.forkee.html_url }}"
+          TEXT="🍴 ToyMania was forked by ${USER}\n\nView their fork here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="🍴 ToyMania was forked by ${USER}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
-            -d chat_id="${TELEGRAM_CHAT_ID}" \
-            --data-urlencode text="View their fork here: ${LINK}"
+            --data-urlencode text="${TEXT}"
