Added a hole bunch of features, and modified the telegram workflow to exclude the sending of entire commit descriptions.
Added an info file to all of the key folders. You can now put your own descriptions to all of the keys found in your inventory.
Added an info file to all of the weapon folders. You can now put your own stats to all of the weapons used in the game.
You can now choose the dialog theme you want to use for reading various game dialogs in the sound settings menu.
You can now choose the menu theme you want to use for navigating various game menus in the sound settings menu.
You can now choose the default soundpack to use for the entire game in the sound settings menu.
Refactored the speaker test menu to take random speaker test sounds instead of preconfigured ones.
Added an info file to all of the toy folders. You can now put your own descriptions to all of the toys found in your inventory.
You can now cycle through the toys you've collected in the normal and endless games when pressing the tab key.
Renamed all of the toys found in the toys folder with their own Distinct names. Thanks goes to my best friend Keri for helping me think of names to give each of the toys found in the folder.
Added full soundpack support to the game. The game's sounds will no longer be encrypted from now on.

--- a/.github/workflows/telegram-notifier.yml
+++ b/.github/workflows/telegram-notifier.yml
@@ -18,6 +18,7 @@ on:
   fork:
 
 jobs:
+
   notify_commit:
     if: github.event_name == 'push' && vars.ENABLE_PUSH_NOTIFICATIONS == 'true'
     runs-on: ubuntu-latest
@@ -28,9 +29,10 @@ jobs:
       - name: Notify commit
         run: |
           AUTHOR="${{ github.event.sender.login }}"
-          MESSAGE="${{ github.event.head_commit.message }}"
+          FULL_MESSAGE="${{ github.event.head_commit.message }}"
+          SUMMARY=$(echo "$FULL_MESSAGE" | head -n 1)
           LINK="https://github.com/${{ github.repository }}/commit/${{ github.sha }}"
-          TEXT="New commit from ${AUTHOR}: ${MESSAGE} View the commit here: ${LINK}"
+          TEXT="New commit from ${AUTHOR}: ${SUMMARY} View the commit here: ${LINK}"
           curl -s -X POST https://api.telegram.org/bot${TELEGRAM_TOKEN}/sendMessage \
             -d chat_id="${TELEGRAM_CHAT_ID}" \
             --data-urlencode text="${TEXT}"
